--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.2",
     "styled-components": "^5.1.1"
   },
   "scripts": {
