--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,5 +1,12 @@
+// {
+//   "presets": ["@babel/preset-env", "@babel/preset-react"],
+//   "plugins": [
+//     "@babel/plugin-proposal-class-properties",
+//     "@babel/transform-runtime"
+//   ]
+// }
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": ["@babel/preset-env"],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/transform-runtime"
